force-app/main/default/objects/Invoke_Email_and_Send__e/Invoke_Email_and_Send__e.object-meta.xml
<CustomObject>
    <label>Invoke Email and Send</label>
    <pluralLabel>Invoke Email and Sends</pluralLabel>
</CustomObject>