force-app/main/default/objects/Invoke_Email_and_Send__e/fields/Email_send_OTP__c.field-meta.xml
<CustomField>
    <fullName>Email_send_OTP__c</fullName>
    <label>Email send OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>