force-app/main/default/objects/Invoke_Email_and_Send__e/fields/getRecordId__c.field-meta.xml
<CustomField>
    <fullName>getRecordId__c</fullName>
    <label>getRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>