force-app/main/default/objects/Invoke_Email_and_Send__e/fields/SMS_send_OTP__c.field-meta.xml
<CustomField>
    <fullName>SMS_send_OTP__c</fullName>
    <label>SMS send OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>